test/resources/kind-config.yaml
# Copyright 2024 Vega Cloud, Inc.

# Use of this software is governed by the Business Source License
# included in the file licenses/BSL.txt.

# As of the Change Date specified in that file, in accordance with
# the Business Source License, use of this software will be governed
# by the Apache License, Version 2.0, included in the file
# licenses/APL.txt.

# kind-config.yaml
kind: Cluster
apiVersion: kind.x-k8s.io/v1alpha4
nodes:
  - role: control-plane
  - role: worker
  - role: worker
  - role: worker
